# btr-md

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  justfile
.backlog/: .context.yaml  index.yaml
crates/pmd-app/: Cargo.toml  tauri.conf.json
crates/pmd-app/capabilities/: default.json
crates/pmd-app/icons/: icon.icns
crates/pmd-app/src/: cli.rs  lib.rs  main.rs  navigation_policy.rs  path_scope.rs  watcher.rs  workspace_ignore.rs
crates/pmd-app/src/cmd/: asset.rs  browse.rs  default_handler.rs  doc.rs  export.rs  file.rs  mod.rs  render.rs  reveal.rs  session.rs  settings.rs  theme.rs  window.rs
crates/pmd-app/src/doc/: merge.rs  mod.rs  modes.rs  race.rs  registry.rs  state.rs
crates/pmd-app/src/preview/: asset_scope.rs  contracts.rs  git_root.rs  grants.rs  image_workflow.rs  link_activation.rs  mod.rs  render_pipeline.rs  resource_policy.rs  trust_roots.rs  validation.rs
crates/pmd-app/src/state/: focus_order.rs  mod.rs  recents.rs  session.rs  settings.rs  window_session.rs
crates/pmd-app/tests/: asset_grants.rs  async_validation.rs  cli.rs  cmd_render.rs  cmd_settings.rs  cmd_theme.rs  doc_state.rs  link_activation.rs  navigation_policy.rs  resource_policy.rs  state_path_scope.rs  trust_roots.rs  watcher.rs
crates/pmd-core/: Cargo.toml
crates/pmd-core/src/: config_doc.rs  document_kind.rs  emit.rs  escape.rs  html.rs  incremental.rs  lib.rs  parse.rs  source_map.rs
crates/pmd-core/src/facts/: builder.rs  counts.rs  frontmatter.rs  links.rs  mod.rs  slug.rs
crates/pmd-core/src/sanitize/: allowlist.rs  mod.rs
crates/pmd-core/src/theme/: mix.rs  mod.rs  parse.rs  schema.rs  validate.rs
crates/pmd-core/tests/: alerts_footnotes.rs  document_facts_blocks.rs  document_facts_embedded_counts.rs  document_facts_frontmatter.rs  document_facts_headings.rs  document_facts_links.rs  frontmatter_not_rendered.rs  github_parity.rs  golden.rs  incremental.rs  math_escapes.rs  prop_incremental.rs  prop_source_map.proptest-regressions  prop_source_map.rs  security.rs  theme_completeness.rs  theme_validate.rs
crates/pmd-core/tests/fixtures/github-parity/: 01-alerts.expected.html  01-alerts.md  02-footnotes.expected.html  02-footnotes.md  03-task-list.expected.html  03-task-list.md  04-duplicate-anchors.expected.html  05-mermaid.expected.html  06-math.expected.html  06-math.md  07-relative-links.expected.html  07-relative-links.md  08-raw-html-security.expected.html  08-raw-html-security.md
docs/: feature-ideas.md  github-parity.md  style-guide.md
flatpak/: dev.previewmd.App.yml  md.btr.app.yml
reviews/: 2026-05-25-sec-review-markdown-sanitizer-1.md  2026-05-25-sec-review-markdown-sanitizer-COVERAGE-1.md  2026-05-25-sec-review-markdown-sanitizer-round3-1.md  2026-05-25-sec-review-markdown-sanitizer-round3-COVERAGE-1.md
scripts/: capture-screenshots.sh  e2e.sh  install-desktop-files.sh  install-themes.sh  package-appimage.sh  package-flatpak.sh  review-and-fix.sh  theme-previews.mjs  theme-validate.sh  visual-review.sh
ui/: index.html  package-lock.json  package.json  playwright.config.cjs  tsconfig.json
(+266 files in other folders)
