[workspace]
resolver = "2"
members = ["crates/pmd-core", "crates/pmd-app", "crates/pmd-e2e"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
base64 = "0.22"
getrandom = "0.2"
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
ammonia = "4"
tree-sitter = "0.22"
tree-sitter-highlight = "0.22"
notify = "6"
fs2 = "0.4"
xdg = "2.5"
blake3 = "1"
diffy = "0.4"
proptest = "1"
tauri = { version = "2", features = ["protocol-asset", "custom-protocol"] }
tauri-build = "2"
tauri-plugin-dialog = "2"
fantoccini = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
tempfile = "3"
