[package]
name = "pmd-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "pmd_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "btr-md"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
tauri = { workspace = true, features = ["test"] }

[dependencies]
pmd-core = { path = "../pmd-core" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tauri.workspace = true
notify.workspace = true
fs2.workspace = true
xdg.workspace = true
blake3.workspace = true
diffy.workspace = true
tauri-plugin-dialog.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
