[package]
name = "pmd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
pulldown-cmark.workspace = true
ammonia.workspace = true
getrandom.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest.workspace = true
